--- a/launch/costmap_common_params.yaml
+++ b/launch/costmap_common_params.yaml
@@ -1,9 +1,9 @@
-obstacle_range: 2.0
-raytrace_range: 2.5
+obstacle_range: 0.6
+raytrace_range: 0.6
 footprint: [[-0.5,0.5],[0.5,0.5],[0.5,-0.5],[-0.5,-0.5]]
 #robot_radius: 1.0
-inflation_radius: 0.55
+inflation_radius: 0.3
 
 observation_sources: laser_scan_sensor
 
-laser_scan_sensor: {sensor_frame: laser_frame, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+laser_scan_sensor: {sensor_frame: /laser_frame, data_type: LaserScan, topic: /scan, marking: true, clearing: true}
